# Axiom

./: AGENTS.md  Cargo.toml  REWRITE_PLAN.md  ROADMAP.md  SPEC.md  axiomsrc.txt  build.rs  dump.sh
docs/: lua-api.md
src/: backend.rs  cursor.rs  handlers.rs  input.rs  main.rs  render.rs  session.rs  signal.rs  state.rs  sys.rs
src/backend/: drm.rs  egl.rs  gbm.rs  mod.rs  output.rs  session.rs
src/chrome/: bar.rs  custom.rs  de.rs  mod.rs  panes.rs
src/config/: lsp.rs  mod.rs  parser.rs
src/input/: mod.rs
src/ipc/: commands.rs  mod.rs
src/portal/: dbus.rs  mod.rs  pipewire_stream.rs
src/proto/: compositor.rs  decorations.rs  dmabuf.rs  fractional_scale.rs  idle_inhibit.rs  layer_shell.rs  mod.rs  output.rs  screencopy.rs  seat.rs  shm.rs  wl_output.rs  xdg_decoration.rs  xdg_output.rs  xdg_shell.rs
src/render/: bar.rs  chrome.rs  cursor.rs  font.rs  glyph_vao.rs  mod.rs  programs.rs
src/scripting/: abi.rs  lua_api.rs  mod.rs  signals.rs
src/twm/: anim.rs  layout.rs  mod.rs
src/wm/: anim.rs  layout.rs  mod.rs  rules.rs
src/xwayland/: atoms.rs  mod.rs  surface.rs  wm.rs
