[package]
name    = "axiom"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "axiom"
path = "src/main.rs"

[dependencies]
# ── Wayland ───────────────────────────────────────────────────────────────────
wayland-server        = "0.31"
wayland-protocols     = { version = "0.31", features = ["server", "unstable", "staging"] }
wayland-protocols-wlr = { version = "0.2",  features = ["server"] }

# ── DRM / GBM / EGL ──────────────────────────────────────────────────────────
drm         = "0.12"
drm-fourcc  = "2"
gbm         = "0.15"
khronos-egl = { version = "6", features = ["dynamic"] }
gl          = "0.14"
libloading  = "0.8"

# ── Input ─────────────────────────────────────────────────────────────────────
input     = "0.8"
xkbcommon = { version = "0.7", features = ["wayland"] }

# ── Event loop ────────────────────────────────────────────────────────────────
calloop                = { version = "0.12", features = ["signals"] }
calloop-wayland-source = "0.2"

# ── Scripting ─────────────────────────────────────────────────────────────────
mlua = { version = "0.9", features = ["lua54", "vendored"] }

# ── Logging ───────────────────────────────────────────────────────────────────
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
log                = "0.4"

# ── Misc ──────────────────────────────────────────────────────────────────────
anyhow   = "1"
bytemuck = "1"
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }
x11rb = "0.13.2"
nix = { version = "0.31.2", features = ["socket", "fs", "process"] }
fcntl = "0.1.0"

[build-dependencies]
pkg-config = "0.3"

[profile.release]
opt-level = 3
lto       = "thin"
